--- a/styles/estilopersonal.css
+++ b/styles/estilopersonal.css
@@ -14,7 +14,7 @@
     color: white;
     font-family: 'Century Gothic', sans-serif;
     border-radius: 15px;
-    /* box-shadow: 7px 13px 37px black; */
+    /*box-shadow: 7px 13px 37px black;*/
   }
   
   .box h1 {
@@ -59,8 +59,28 @@
     color:#b9b9b9;
     transform: scale(1.3);
   }
-
   
+  #infoTable{
+    
+    border: 1px solid black;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: white
+
+  }
+
+  h3#infoPer{
+      font-style:oblique;
+      margin: 10000;
+      text-align: center;
+  }
+
+  .art_Inf{
+      margin: 20 px 60 px;
+      padding: 30 px 60 px;
+  }
+
+
 footer { 
     color: yellow;
     background-color: rgba(0, 255, 149, 0.726); 
