--- a/styles/estilopersonal.css
+++ b/styles/estilopersonal.css
@@ -4,9 +4,29 @@
     box-sizing: border-box;
   }
 
-  .box {
+  .banner{
+    padding: 5px;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 4%;
+    color: white;
+    font-family: 'Century Gothic', sans-serif;
+    
+  }
+
+  .banner h3{
+    text-align: center;
+    margin: 5x 0 5px;
+}
+
+
+.banner p {
+    text-align: left;
+  }
+
+    .box {
     width: 500px;
-    background: rgba(0, 0, 0, .4);
+    background: rgba(0, 0, 0, 0.288);
     padding: 20px;
     text-align: center;
     margin: 0 auto;
@@ -43,10 +63,6 @@
   .box ul li {
     display: inline-block;
   }
-
-  .box ul li {
-    display: inline-block;
-  }
   .box ul li a {
     color: white;
     font-size: 45px;
@@ -59,7 +75,17 @@
     color:#b9b9b9;
     transform: scale(1.3);
   }
-  
+ 
+  body{
+    background: url('images/foto.jpg') no repeat;
+    background-size: cover;
+  }
+
+
+  .clearfix{
+      clear:both;
+  }
+
   #infoTable{
     
     border: 1px solid black;
@@ -82,8 +108,11 @@
 
 
 footer { 
-    color: yellow;
-    background-color: rgba(0, 255, 149, 0.726); 
+    background: black;
+    color: white;
+    text-align: center;
+    height: 50 px;
+    line-height:50 px;
 }
 
 header { 
@@ -91,11 +120,11 @@ header {
     background-color: white
 }
 
-#table1 {
+/*table1 {
     color: firebrick;
     background-color: aquamarine
 }
-
+*/
 h1 {
     font-family: Arial, sans-serif;
     list-style-type: circle;
@@ -103,10 +132,40 @@ h1 {
 
 }
 
+#content{
+    float: left;
+    width: 80%;
+    min-height: 1000px;
+    background: green;
+}
+
+.article{
+    color:white;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding-bottom: 10 px;
+    border-bottom: 1px solid #eee
+    ;
+}
+
+.article:first-child{
+    padding-top: 10px;
+    border-top:1px solid #eee;
+}
+
+.article h2{
+    font-size: 25px;
+}
+
 aside { 
-    color: lightblue;
-    background-color: olive
-    
+    float: left;
+    width: 20% ;
+    background: orange;
+    min-height: 500px;
+    padding-left: 10px;
+    padding-right: 10 px;
+    padding-top: 20 px;
+       
 }
 
 blockquote { 
@@ -116,7 +175,14 @@ blockquote {
 }
 
 nav {
-    color: blue;
-    background-color: yellow
+    height:30px;
+    border-bottom: 1px solid black;
+    background: lightblue    
 }
 
+nav ul li{
+    float:left;
+    list-style: none;
+    margin: 8px;
+    line-height: 10px;
+}
