--- a/styles/estilopersonal.css
+++ b/styles/estilopersonal.css
@@ -4,29 +4,56 @@
     box-sizing: border-box;
   }
 
-  .banner{
-    padding: 5px;
-    text-align: center;
-    margin: 0 auto;
-    margin-top: 4%;
-    color: white;
-    font-family: 'Century Gothic', sans-serif;
-    
-  }
 
-  .banner h3{
+ 
+footer { 
+    background: black;
+    color: white;
     text-align: center;
-    margin: 5x 0 5px;
+    height: 50 px;
+    line-height:50 px;
+}
+
+header { 
+    color: blue;
+    background-color: white
+}
+
+h1 {
+    font-family: Arial, sans-serif;
+    list-style-type: circle;
+    text-align:center;   
+    background: rgba(0, 0, 255, 0.233);
+}
+
+blockquote { 
+    color: white;
+    text-align:center;
+    background-color: blue;
+}
+
+nav {
+    height:30px;
+    border-bottom: 1px solid black;
+    background: rgba(173, 216, 230, 0.63)    
+}
+
+nav ul li{
+    float:left;
+    list-style: none;
+    margin: 8px;
+    line-height: 10px;
 }
 
 
-.banner p {
-    text-align: left;
+body{
+    background:url(../images/azul.jpg);
+    background-size: cover;
   }
 
-    .box {
+.box {
     width: 500px;
-    background: rgba(0, 0, 0, 0.288);
+    background: rgba(245, 235, 235, 0.404);
     padding: 20px;
     text-align: center;
     margin: 0 auto;
@@ -36,7 +63,11 @@
     border-radius: 15px;
     /*box-shadow: 7px 13px 37px black;*/
   }
-  
+
+  .box-img{
+      border-radius: 50%;
+  }
+
   .box h1 {
     font-size: 40px;
     letter-spacing: 4px;
@@ -48,7 +79,7 @@
     font-size: 20px;
     letter-spacing: 3px;
     font-weight: 100;
-    margin-bottom: 30px
+    margin-bottom: 20px
   }
 
   .box p {
@@ -63,126 +94,17 @@
   .box ul li {
     display: inline-block;
   }
+
   .box ul li a {
     color: white;
     font-size: 45px;
     padding: 10px 5px;
-    transition: all .5s ease-in-out;
+    transition: all 0.5s ease-in-out;
     display: block;
   }
   
   .box ul li a:hover {
     color:#b9b9b9;
-    transform: scale(1.3);
-  }
- 
-  body{
-    background: url('images/foto.jpg') no repeat;
-    background-size: cover;
+    transform: scale(1.1);
   }
 
-
-  .clearfix{
-      clear:both;
-  }
-
-  #infoTable{
-    
-    border: 1px solid black;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: white
-
-  }
-
-  h3#infoPer{
-      font-style:oblique;
-      margin: 10000;
-      text-align: center;
-  }
-
-  .art_Inf{
-      margin: 20 px 60 px;
-      padding: 30 px 60 px;
-  }
-
-
-footer { 
-    background: black;
-    color: white;
-    text-align: center;
-    height: 50 px;
-    line-height:50 px;
-}
-
-header { 
-    color: blue;
-    background-color: white
-}
-
-/*table1 {
-    color: firebrick;
-    background-color: aquamarine
-}
-*/
-h1 {
-    font-family: Arial, sans-serif;
-    list-style-type: circle;
-    text-align:center;
-
-}
-
-#content{
-    float: left;
-    width: 80%;
-    min-height: 1000px;
-    background: green;
-}
-
-.article{
-    color:white;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    padding-bottom: 10 px;
-    border-bottom: 1px solid #eee
-    ;
-}
-
-.article:first-child{
-    padding-top: 10px;
-    border-top:1px solid #eee;
-}
-
-.article h2{
-    font-size: 25px;
-}
-
-aside { 
-    float: left;
-    width: 20% ;
-    background: orange;
-    min-height: 500px;
-    padding-left: 10px;
-    padding-right: 10 px;
-    padding-top: 20 px;
-       
-}
-
-blockquote { 
-    color: white;
-    text-align:center;
-    background-color: brown
-}
-
-nav {
-    height:30px;
-    border-bottom: 1px solid black;
-    background: lightblue    
-}
-
-nav ul li{
-    float:left;
-    list-style: none;
-    margin: 8px;
-    line-height: 10px;
-}
